chore: AOT cache changes